--- a/css/PhuHuynh.css
+++ b/css/PhuHuynh.css
@@ -36,6 +36,7 @@
 
 #location h5 {
     color: #fff;
+    font-size: 14px;
     line-height: 36px;
     display: inline-block;
 }
@@ -180,7 +181,7 @@
 /* -------------------End: Header and Nav---------------- */
 #cover {
     display: flex;
-    background-image: url(/img/Dalat.jpg);
+    background-image: url(img/Dalat.jpg);
     background-size: cover;
     background-position: center;
     height: 1083px;
@@ -206,19 +207,28 @@
 }
 
 /* ------------ENd: cover ------------------------*/
-#content {}
+#content {
+    height: 900px;
+    overflow: auto;
+}
 
 #content p {
     color: #000;
     font-size: 20px;
     line-height: 1.5;
     font-weight: bold;
+    white-space: nowrap;
+    /* Ngăn người dùng tự động ngắt dòng */
+    overflow: hidden;
+    /* Ẩn nội dung bị tràn ra ngoài phạm vi */
+    text-overflow: ellipsis;
+    /* Hiển thị dấu ba chấm (...) khi nội dung bị tràn ra ngoài */
 
 }
 
 #content .same_box img {
-    height: 130px;
-    width: 180px;
+    height: 225px;
+    width: auto;
     float: left;
     margin-right: 15px;
 }
