--- a/css/BangTin.css
+++ b/css/BangTin.css
@@ -1,16 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital@1&family=Ubuntu:ital,wght@1,300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Birthstone&family=Birthstone+Bounce&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Birthstone&family=Birthstone+Bounce&family=Roboto+Condensed&family=Roboto:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Birthstone&family=Birthstone+Bounce&family=Roboto+Condensed&family=Roboto:ital,wght@0,300;1,100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Birthstone&family=Birthstone+Bounce&family=Roboto+Condensed&family=Roboto:ital,wght@1,300&display=swap');
 
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
 }
-
-#main {}
 
 #header {
     /* position: fixed; */
@@ -20,30 +15,29 @@
     top: 0px;
     left: 0px;
     right: 0px;
-    font-family: 'Nunito', sans-serif;
 }
 
 /* ---------------Begin:Introduce----------- */
 
 /* ----------------Begin:dia chi----------- */
 #location {
-    line-height: 36px;
+    /* line-height: 36px; */
     padding-left: 50px;
     padding-right: 50px;
     display: inline-block;
-    font-family: 'Nunito', sans-serif;
 }
 
 #location .fa-location-dot {
     padding-right: 15px;
     color: #fff;
-    line-height: 36px;
+    /* line-height: 36px; */
     display: inline-block;
 }
 
 #location h5 {
     color: #fff;
-    line-height: 36px;
+    font-size: 14px;
+    /* line-height: 36px; */
     display: inline-block;
 }
 
@@ -54,19 +48,16 @@
 /* ------------End:dia chi----------------- */
 /* ------------Begin:so dien thoai--------- */
 #contact {
-    line-height: 36px;
     display: inline-block;
 }
 
 #contact .fa-mobile-screen-button {
-    line-height: 36px;
     color: #fff;
     display: inline-block;
     padding-right: 15px;
 }
 
 #contact .mobile-text {
-    line-height: 36px;
     color: #fff;
     display: inline-block;
 }
@@ -74,7 +65,6 @@
 /* ------------End:so dien thoai--------- */
 /* ------------Begin:icon-list--------- */
 #icon-list {
-    line-height: 36px;
     display: inline-block;
     float: right;
     padding-right: 100px;
@@ -84,7 +74,6 @@
 #icon-list .fa-instagram,
 #icon-list .fa-google-plus-g {
     color: #fff;
-    line-height: 36px;
     letter-spacing: 16px;
 }
 
@@ -162,6 +151,7 @@
 
 #nav li:hover .subnav {
     visibility: visible;
+    padding-left: 0px !important;
     top: 108px;
 }
 
@@ -177,23 +167,67 @@
     color: #fff;
 }
 
-/* -------------------End: Header and Nav---------------- */
+#slider {
+    /* position: relative; */
+    /* background: url(/Home/accset/img/background_1.jpg) top center / cover no-repeat; */
+    height: 1084px;
+    width: 100%;
+}
 
+/* -------------------End: Header and Nav---------------- */
 #cover {
     display: flex;
-    background-image: url(/BangTin/asset/img/Hinh5-01.jpg);
+    flex-direction: column;
     background-size: cover;
     background-position: center;
-    height: 1650px;
+    height: 1083px;
+    border-style: solid;
     margin-left: 7%;
     width: 85%;
     padding: 15px;
     border-radius: 10px;
     border-color: rgb(138, 64, 121);
-    border-style: solid;
 }
 
-/* -------------- Begin: footer--------------- */
+#cover .same_box {
+    width: 100%;
+    margin: 35px;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+#cover .same_box img {
+    height: 50px;
+    width: 50px;
+}
+
+/* ------------ENd: cover ------------------------*/
+#content {
+    height: 900px;
+    overflow: auto;
+}
+
+#content p {
+    color: #000;
+    font-size: 20px;
+    line-height: 1.5;
+    font-weight: bold;
+    white-space: nowrap;
+    /* Ngăn người dùng tự động ngắt dòng */
+    overflow: hidden;
+    /* Ẩn nội dung bị tràn ra ngoài phạm vi */
+    text-overflow: ellipsis;
+    /* Hiển thị dấu ba chấm (...) khi nội dung bị tràn ra ngoài */
+
+}
+
+#content .same_box img {
+    height: 225px;
+    width: auto;
+    float: left;
+    margin-right: 15px;
+}
+
 #footer {
     position: absolute;
     height: 500px;
@@ -219,11 +253,6 @@
     border-right: color(#000);
 }
 
-/* #content p {
-    font-size: large;
-
-} */
-
 #footer .text_box,
 #footer .text_box a {
     list-style: none;
@@ -242,111 +271,4 @@
 #footer .banner {
     text-align: center;
     margin-left: 143px;
-}
-
-#khung {
-    vertical-align: top;
-    width: 60%;
-    height: 300px;
-    border: 2px solid gray;
-    padding: 20px;
-    margin: 20px;
-    background-color: white;
-    text-align: justify;
-    display: inline-block;
-    border-radius: 20px;
-    margin-bottom: 50px;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-#khung:hover {
-    background-color: #B3AB5D;
-    color: white;
-}
-
-#khung1 {
-    width: 60%;
-    height: 180px;
-    border: 2px solid gray;
-    padding: 20px;
-    margin: 20px;
-    background-color: white;
-    text-align: justify;
-    display: inline-block;
-    border-radius: 20px;
-    margin-bottom: 50px;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-#khung1:hover {
-    background-color: #B3AB5D;
-    color: white;
-}
-
-#bantin {
-    font-family: 'Birthstone Bounce', cursive;
-    color: #FF4E30;
-    font-size: 56px;
-    text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
-
-.ndlon {
-    font-size: 30px;
-    font-family: 'Roboto Condensed', sans-serif;
-    margin-bottom: 7px;
-    padding-left: 23px;
-    border-left: solid 5px;
-    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
-    color: #000;
-}
-
-p {
-    font-size: 20px;
-    font-family: 'Roboto Condensed', sans-serif;
-    margin-bottom: 5px;
-    line-height: 1.5;
-}
-
-.ndnho {
-    font-size: 20px;
-    line-height: 1.5;
-}
-
-.chuongtrinhhoc {
-    /* text-indent: 20px; */
-    padding-left: 23px;
-    font-size: 20px;
-}
-
-.duong-thang {
-    width: 2px;
-    height: 100px;
-    background-color: #000;
-    display: block;
-}
-
-.hinhanh {
-    display: block;
-    width: 170px;
-    height: auto;
-}
-
-.khung2 {
-    width: 25%;
-    height: 300px;
-    margin: 20px;
-    margin-left: 56px;
-    border-radius: 10%;
-    margin-bottom: 50px;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    display: inline-block;
-    flex: 1;
-}
-
-.khung2 img {
-    width: 100%;
-    height: 100%;
-    border-radius: 10%;
 }
