--- a/css/PhuHuynh.css
+++ b/css/PhuHuynh.css
@@ -21,7 +21,7 @@
 
 /* ----------------Begin:dia chi----------- */
 #location {
-    line-height: 36px;
+    /* line-height: 36px; */
     padding-left: 50px;
     padding-right: 50px;
     display: inline-block;
@@ -30,14 +30,14 @@
 #location .fa-location-dot {
     padding-right: 15px;
     color: #fff;
-    line-height: 36px;
+    /* line-height: 36px; */
     display: inline-block;
 }
 
 #location h5 {
     color: #fff;
     font-size: 14px;
-    line-height: 36px;
+    /* line-height: 36px; */
     display: inline-block;
 }
 
@@ -48,19 +48,16 @@
 /* ------------End:dia chi----------------- */
 /* ------------Begin:so dien thoai--------- */
 #contact {
-    line-height: 36px;
     display: inline-block;
 }
 
 #contact .fa-mobile-screen-button {
-    line-height: 36px;
     color: #fff;
     display: inline-block;
     padding-right: 15px;
 }
 
 #contact .mobile-text {
-    line-height: 36px;
     color: #fff;
     display: inline-block;
 }
@@ -68,7 +65,6 @@
 /* ------------End:so dien thoai--------- */
 /* ------------Begin:icon-list--------- */
 #icon-list {
-    line-height: 36px;
     display: inline-block;
     float: right;
     padding-right: 100px;
@@ -78,7 +74,6 @@
 #icon-list .fa-instagram,
 #icon-list .fa-google-plus-g {
     color: #fff;
-    line-height: 36px;
     letter-spacing: 16px;
 }
 
@@ -156,6 +151,7 @@
 
 #nav li:hover .subnav {
     visibility: visible;
+    padding-left: 0px !important;
     top: 108px;
 }
 
@@ -181,16 +177,17 @@
 /* -------------------End: Header and Nav---------------- */
 #cover {
     display: flex;
+    flex-direction: column;
     background-image: url(img/Dalat.jpg);
     background-size: cover;
     background-position: center;
     height: 1083px;
+    border-style: solid;
     margin-left: 7%;
     width: 85%;
     padding: 15px;
     border-radius: 10px;
     border-color: rgb(138, 64, 121);
-    border-style: solid;
 }
 
 #cover .same_box {
